--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+:root {
+    background-color:rgb(135, 206,325);
+      
+  }
+
+  p:first-child{
+    color: white;
+    background-color: black;
+  }
+  p:nth-child(2){
+   color: black;
+  }
+  p:last-child{
+    color: red;
+    
+  }
+  ul{
+    width: 50%;
+    padding: 10px;
+  }
+
+  li:first-child{
+    font-size: 22px;
+    background-color:white;
+  }
+  li:nth-child(2){
+    background-color:gray;
+  }
+  li:nth-child(3){
+    background-color:pink;
+  }
+  li:nth-child(4){
+    background-color:gray;
+  }
+  li:last-child{
+    font-size: 22px;
+    background-color:white;
+    
+  }
